--- a/packages/compass-crud/src/components/document-elements.less
+++ b/packages/compass-crud/src/components/document-elements.less
@@ -6,7 +6,6 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   max-width: 100%;
-  z-index: 1;
 
   .line-number {
     position: absolute;
@@ -38,6 +37,7 @@
       .btn {
         border-color: #8c8c8c;
       }
+
       .caret {
         visibility: visible;
       }
@@ -51,4 +51,3 @@
     }
   }
 }
-
